--- a/StockApp/Pages/Index.razor
+++ b/StockApp/Pages/Index.razor
@@ -1,9 +1,35 @@
 ﻿@page "/"
+@using System.Net.Http.Json
+@using System.Text.Json
+@using StockApp.Data;
+@inject HttpClient httpClient
 
-<PageTitle>Index</PageTitle>
+<PageTitle>Product search page</PageTitle>
 
-<h1>Hello, world!</h1>
+   <RadzenAutoComplete TextProperty="Name" Change=@(args => Search(args)) Style="margin-bottom: 20px" />
+   <RadzenDataGrid TItem="Product" Data="@products" EmptyText="@emptyText">
+        <Columns>
+            <RadzenDataGridColumn TItem="Product" Property="Name" Title="Name" />
+            <RadzenDataGridColumn TItem="Product" Property="Seria" Title="Seria" />
+            <RadzenDataGridColumn TItem="Product" Property="Quantity" Title="Quantity" />
+        </Columns>
+    </RadzenDataGrid>
 
-Welcome to your new app.
+@code {
+    private IEnumerable<Product>? products;
+    private string? emptyText;
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+    private async Task Search(object value)
+    {
+        HttpClient client = new HttpClient();
+        if (value is not null)
+        {
+            var searchText = value.ToString();
+            var result = await client.GetFromJsonAsync<IEnumerable<Product>>($"https://localhost:7036/api/Products/{searchText}");
+            if(result is not null)
+            {
+                products = result;
+            }
+        }
+    }
+}
