--- a/StockApp/Shared/MainLayout.razor
+++ b/StockApp/Shared/MainLayout.razor
@@ -3,13 +3,11 @@
 <PageTitle>StockApp</PageTitle>
 
 <div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
-
+    <RadzenNotification/>
+    <RadzenContextMenu/>
     <main>
         <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+            <a href="#" target="_parent">Logout</a>
         </div>
 
         <article class="content px-4">
