--- a/StockApp/Shared/MainLayout.razor
+++ b/StockApp/Shared/MainLayout.razor
@@ -3,13 +3,13 @@
 <PageTitle>StockApp</PageTitle>
 
 <div class="page">
-    <RadzenNotification/>
-    <RadzenContextMenu/>
     <main>
         <div class="top-row px-4">
+            <Login />
             <a href="#" target="_parent">Logout</a>
         </div>
-
+        <RadzenNotification/>
+        <RadzenContextMenu/>
         <article class="content px-4">
             @Body
         </article>
