Update to new version .NET 6 release

--- a/StockApp/Shared/MainLayout.razor
+++ b/StockApp/Shared/MainLayout.razor
@@ -1,4 +1,5 @@
-﻿@inherits LayoutComponentBase
+﻿@using StockApp.Pages
+@inherits LayoutComponentBase
 
 <PageTitle>StockApp</PageTitle>
 
@@ -6,7 +7,6 @@
     <main>
         <div class="top-row px-4">
             <Login />
-            <a href="#" target="_parent">Logout</a>
         </div>
         <RadzenNotification/>
         <RadzenContextMenu/>
