--- a/StockApp/Pages/Login.razor
+++ b/StockApp/Pages/Login.razor
@@ -1,16 +1,20 @@
-﻿@using Microsoft.Identity.Web
+﻿@using Microsoft.AspNetCore.Mvc
+@using Microsoft.Identity.Web
 @using Microsoft.Extensions.Options
+@using Microsoft.AspNetCore.Components.Authorization
+@using System.Security.Claims
+@inject AuthenticationStateProvider AuthenticationStateProvider
 @inject IOptionsMonitor<MicrosoftIdentityOptions> microsoftIdentityOptions
 
 <AuthorizeView>
     <Authorized>
         @if (canEditProfile)
         {
-            <a href="MicrosoftIdentity/Account/EditProfile">Hello, @context.User.Identity?.Name!</a>
+            <a href="MicrosoftIdentity/Account/EditProfile">Hello, @userName (@storeName)</a>
         }
         else
         {
-            <text>Hello, @context.User.Identity?.Name!</text>
+            <text>Hello, @userName (@storeName)</text>
         }
         <a href="MicrosoftIdentity/Account/SignOut">Log out</a>
     </Authorized>
@@ -20,11 +24,22 @@
 </AuthorizeView>
 
 @code {
+    public string? userName;
+    public string? storeName;
     private bool canEditProfile;
 
-    protected override void OnInitialized()
+    protected override async void OnInitialized()
     {
         var options = microsoftIdentityOptions.CurrentValue;
         canEditProfile = !string.IsNullOrEmpty(options.EditProfilePolicyId);
+        await GetClaimsPrincipalData();
+    }
+
+    private async Task GetClaimsPrincipalData()
+    {
+        var authState = await AuthenticationStateProvider.GetAuthenticationStateAsync();
+        var user = authState.User.Claims;
+        userName = user.FirstOrDefault(x => x.Type == "name")?.Value;
+        storeName = user.FirstOrDefault(x => x.Type == "extension_StoreName")?.Value;
     }
 }
